project completed, learning git ...

--- a/.env
+++ b/.env
@@ -4,9 +4,10 @@ NODE_ENV= development
 
 JWT_SECRET= qwertyuiop
 
-EMAIL_HOST= smtp-mail.outlook.com
-EMAIL_USER= kunalbhattarai911outlook.com
-EMAIL_PASS= 'K200235B'
+EMAIL_HOST= sandbox.smtp.mailtrap.io
+EMAIL_USER= 878de78852c96f
+EMAIL_PASS= 'd7de344e611ce1'
+
 
 FRONTEND_URL= http://localhost:3000
 
